# seongnam_project

./: .gitignore  main.py  pyproject.toml
김윤서/: download_data.ipynb  eda.ipynb
김재천/00_공모전서류/: [붙임1] 공고문(2026년 성남시 공공데이터 활용분석 시각화 경진대회 공모전)_수정.hwp  [붙임2] 제출 서식.hwp  [붙임3] 발표자료 양식.pptx  [붙임4] 민간데이터 제공 안내서.xlsx
김재천/03_EDA/: parquet_explorer.ipynb
김재천/03_EDA/notebooks/: 00_data_merge.ipynb  column-navigator.ipynb  multi-file-merge.ipynb  programmatic-eda.ipynb  trans_parq.ipynb
김재천/03_EDA/reports/: analysis-assumptions-log.md  analysis-path-roadmap.md  analysis-planning_report.md  column-navigator_report.md  multi-file-merge_report.md  programmatic-eda_report.md
김재천/05_산출물/: 변인정의서.docx  변인정의서_원본테이블.docx
서윤범/: test.ipynb
